kubernetes/promtail/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: promtail
  name: promtail-policy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: promtail
  ingress:
    # deny all ingress traffic
    - {}
  egress:
    # kube-api
    - toEntities: [kube-apiserver]
      toPorts:
        - ports:
            - protocol: TCP
              port: "6443"
    # dns resolution
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - protocol: ANY
              port: "53"
          rules:
            dns:
              - matchName: "loki-write-headless.loki.svc.cluster.local."
    # loki-write
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: loki
            app.kubernetes.io/instance: loki
            app.kubernetes.io/component: write
      toPorts:
        - ports:
            - protocol: TCP
              port: "3100"
